# aob

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
aob/: entry.py  main.py  setup.py
aob/prompts/: examples.py  generate_test.py  prompt_templates.py  simple_example.py  sqlite_example.py  transform_example.py
aoc/: main.py
aoc/prompts/: generate_test.py
aox/: __init__.py  main.py
