[tool.poetry]
name = "aox"
version = "0.1.0"
description = "CLI tool for managing and running AO Counter"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.5"
rich = "^13.9.3"
setuptools = "^75.3.0"

[tool.poetry.scripts]
aox = "aox.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
