[tool.poetry]
name = "aob"
version = "0.2.3"
description = "CLI tool for managing and running AO Counter"
authors = ["Pratik <pratik@arweave.org>"]

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.5"
rich = "^13.9.3"
setuptools = "^75.3.0"
ruff = "^0.7.2"
ell-ai = {extras = ["anthropic"], version = "^0.0.14"}
openai = "^1.54.1"

[tool.poetry.scripts]
aob = "aob.main:app"
aob-welcome = "aob.entry:show_welcome_message"

[tool.poetry.plugins."poetry.application.plugin"]
post_install = "aob.entry:show_welcome"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
